# IA_Newsletter

./: .gitignore  cliente.py  ejecutar_scrapers.bat  main.py  pyproject.toml  shared_definitions.py
agent/: classifier.py  summarizer.py
db/: supabase_client.py
scraper/: arxiv_scraper.py  news_scraper.py  youtube_scraper.py
templates/: index.html
templates/static/: icons.css  scripts.js  style.css
