[project]
name = "agente-resumidor-de-noticias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "logfire>=4.11.0",
    "pydantic-ai>=1.0.15",
    "supabase>=2.21.1",
    "youtube-search>=2.1.2",
    "Jinja2>=3.1",
]
